--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -5,7 +5,7 @@
     <img src="{{product.thumbnail_loop.url}}" alt="" class="product-img" id="ordered_product_thumbnail">
     <div class="ordered_items_notice_details">
         <div style="display: flex;flex-direction: column;">
-            <p class="ordered_items_small ordered_item_person"><span id="order_person_name" style="font-weight:600">Zoran</span> само што нарача</p>
+            <p class="ordered_items_small ordered_item_person"><span id="order_person_name" style="font-weight:600">Zoran</span> само што нарача <img src="{% static 'icons/user-check.svg' %}" style="display:inline;width:22px;height:22px;filter: invert(67%) sepia(42%) saturate(4504%) hue-rotate(356deg) brightness(98%) contrast(108%);position:relative;top:4px;"></p>
             <p style="position: absolute;right:0;padding:16px;top:0;cursor:pointer;" id="close_ordered_items_notice">&#10005;</p>
             <p id="order_person_product_name" class="ordered_items_big">ZASTITNA CERADA ZA AVTOMOBILSKI RABOTI</p>
             <p> 
