--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -173,6 +173,7 @@
             <div class="top-row">
                 <p class="reviewer-initials">{{review.avatar_name}}</p>
                 <p class="reviewer-name">{{ review.name }}</p>
+                <p class="reviewer-verified"><img src="{% static 'icons/user-check.svg' %}" style="display:inline;width:28px;height:28px;filter: invert(67%) sepia(42%) saturate(4504%) hue-rotate(356deg) brightness(98%) contrast(108%);position:relative;top:4px;"> верифициран купувач</p>
             </div>
             <div class="rating-row">
                 <div class="rating{{ review.rating }}">
