--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -8,9 +8,10 @@
         {% for product in products %}
             <div class="product">
                 
-                <a href="{% url 'product-page' product.slug %}" class="product-link" aria-label="Линк до продукт">
+                <a href="{% url 'product-page' product.slug %}" class="product-link" aria-label="Линк до продукт" style="position:relative">
                 <img src="{{ product.thumbnail_loop.url }}" alt="Product image" width="250" height="250" class="product-feed-thumbnail">
                 <h2 class="product-feed-title">{{ product.title }}</h2>
+                <div class="product-sale-badge"><p>-{{product.get_percentage_off}}%</p></div>
                 {% if product.review_average > 0 %}
                 <div class="rating rating{{ product.review_average}} list-ratings">
                     <span class="star1"></span>
