--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -31,6 +31,7 @@
         <h3>СПЕЦИЈАЛНА ПОНУДА САМО ДЕНЕС</h3>
         <h5>Нарачај го истиот производ и заштеди дополнителни 20%</h5>
         <div class="offer-box">
+        <p class="offer-timer" style="font-weight: 600;">ПОНУДАТА ИСТЕКУВА ЗА <br><span id="timer" style="font-size: 24px">03:00</span></p>
         <input type="hidden" class="order_id" value="{{ order.id }}">
         <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
         <img src="{{ offerproduct.product.thumbnail.url }}" alt="" width="250" height="250">
@@ -149,3 +150,22 @@
     <a href="{% url 'shop-home' %}" class="thankyou-proceed-to-home">ПРОДОЛЖИ СО КУПУВАЊЕ</a>
 </div>
 {% endblock content %}
+
+{% block scripts %}
+<script>
+    var timerDisplay = document.getElementById("timer");
+    var timerDuration = 180;
+    var timerInterval = setInterval(updateTimer, 1000);
+    function updateTimer() {
+        var minutes = Math.floor(timerDuration / 60);
+        var seconds = timerDuration % 60;
+        var displayString = minutes.toString().padStart(2, '0') + ":" + seconds.toString().padStart(2, '0');
+        timerDisplay.textContent = displayString;
+        if (timerDuration <= 0) {
+            clearInterval(timerInterval);
+            timerDisplay.textContent = "00:00";
+        }
+        timerDuration--;
+    }
+</script>
+{% endblock scripts %}
