--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -47,6 +47,12 @@
 <div class="col-2 product-page product_data">
     
     <h3 class="product-title product-page prod_title_tracker" id="main-product-title">{{ product.title }}</h3>
+    {% if product.is_best_seller %}
+    <div class="best-seller">
+        <img src="{% static 'icons/rocket.svg' %}" alt="" style="filter: invert(56%) sepia(85%) saturate(2072%) hue-rotate(359deg) brightness(103%) contrast(105%); width:28px;height:28px">
+        <p style="font-weight:600;font-size:14px;">Голема побарувачка</p>
+    </div>
+    {% endif %}
     {% if reviews %}
     <div class="rating rating{{ product.review_average}}">
         <span class="star1"></span>
