--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -2050,7 +2050,26 @@ select {
 .main-toggle{
     display: block;
 }
+.faq-toggle{
+    border-bottom: 1px solid #abaeb4;
+}
+.frequently-asked-questions .faq-toggle:first-of-type {
+    border-top: 1px solid #abaeb4;
+  }
+.faq-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    font-weight: 500;
+}
 
+.faq-toggle:not(.product-faq) .faq-content{
+    display:none;
+}
+.vertical-flip{
+    transform: rotate(180deg);
+}
 /* EndCheckout */
 /* thank you */
     .thank-you{
@@ -2439,13 +2458,21 @@ section#ordered_items_notice_wrapper {
     .thankumessage-last{
 	margin-bottom: 30px;
     }
-    .add-to-cartBtn, .variable-add-to-cartBtn, .offerBtn, .fee-add, #place_order, .proceed-to-checkout, .offer-button, .thankyou-proceed-to-home, .attribute-item{
+    .add-to-cartBtn, .variable-add-to-cartBtn, .offerBtn, .fee-add, #place_order, .proceed-to-checkout, .offer-button, .thankyou-proceed-to-home, .attribute-item, .faq-title{
         cursor: pointer;
         transition: all .2s ease-in-out; 
     }
-    .add-to-cartBtn:hover, .variable-add-to-cartBtn:hover, .offerBtn:hover, .fee-add:hover, #place_order:hover, .proceed-to-checkout:hover, .offer-button:hover, .thankyou-proceed-to-home:hover, .attribute-item:hover{
+    .add-to-cartBtn:hover, .variable-add-to-cartBtn:hover, .offerBtn:hover, .fee-add:hover, #place_order:hover, .proceed-to-checkout:hover, .offer-button:hover, .thankyou-proceed-to-home:hover, .attribute-item:hover, .faq-title:hover{
         transform: scale(1.05); 
         font-weight: 700;
+    }
+    .faq-title:hover{
+    background: var(--green);
+    color: white;
+    cursor: pointer;
+    }
+    .faq-title:hover .faq-icon{
+	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(280deg) brightness(103%) contrast(103%);
     }
     .checkout-offerBtn:hover, #place_order:hover, .thankyou-proceed-to-home:hover{
         background: var(--black)!important;
