--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -108,7 +108,7 @@
     </div>
     {% include "shop/includes/footer.html" %}
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="{%  static 'shop/js/main_minified.js' %}"></script>
+    <script src="{%  static 'shop/js/main_minified_v1.js' %}"></script>
     {% block scripts%}{% endblock scripts %}
 </body>
 </html>
