--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -223,7 +223,7 @@
                 </span>
                 <img src="{% static 'icons/arrow-down.svg' %}" alt="" style="width:16px;height:16px;" class="faq-icon"></div>
             <div class="faq-content">
-                <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Доколку не сте задоволни од производот можете да побарате рефундација или да го замените производот со некој друг што го имаме на залиха моментално. Се што треба е да ни се јавите на телефонскиот број 071321312 и веднаш ќе добиете некој од нашите колеги кој ќе ви помогне да се реши проблемот.</p>
+                <p style="padding:0px 10px 10px 10px;text-align:left;font-size:16px;">Доколку не сте задоволни од производот можете да побарате рефундација или да го замените производот со некој друг што го имаме на залиха моментално. Се што треба е да ни се јавите на телефонскиот број <a href="tel:+38971321312" style="display:inline-block; color:#00703d;font-weight:500;">071321312</a> и веднаш ќе добиете некој од нашите колеги кој ќе ви помогне да се реши проблемот.</p>
             </div>
         </div>
         <div class="faq-toggle">
