--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -72,7 +72,7 @@ input[type=number] {
 #header-banner{
     background: var(--green);
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
     padding: 0.4em 0em;
 }
@@ -89,7 +89,7 @@ input[type=number] {
     text-decoration: none;
 }
 .banner-inner-header{
-    height: 22px;
+    height: 20px;
     position: relative;
     width: 100%;
     overflow: hidden;
@@ -2843,7 +2843,7 @@ section#ordered_items_notice_wrapper {
 
     }
     .banner-inner-header{
-        height: 20px;
+        height: 18px;
     }
     #para1, #para2{
         font-size: 14px;
