--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -171,7 +171,6 @@ input[type=number] {
   #para1,
   #para2 {
     position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
     animation: bannerslide 12s infinite;
@@ -179,6 +178,7 @@ input[type=number] {
     color: white;
     font-weight: 500;
     font-size: 15px;
+    top: 5px;
 
   }
   
@@ -2821,6 +2821,9 @@ section#ordered_items_notice_wrapper {
     }
     .ordered_item_person{
         margin-bottom: 5px;
+    }
+    #para1, #para2{
+        top: 0px!important;
     }
 }
 
