--- a/shop/static/shop/css/main.css
+++ b/shop/static/shop/css/main.css
@@ -3032,3 +3032,341 @@ section#ordered_items_notice_wrapper {
 .main-toggle ol p{
     margin: 0;
 }
+
+.checkout-is-active{
+    overflow: hidden!important;
+}
+#checkout_form .margin-bottom{
+    margin-bottom: 14px;
+}
+#checkout_form_overlay{
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,.4);
+    width: 100%;
+    height: 100%;
+    z-index: 999999999999!important;
+    overflow-x: scroll;
+}
+#checkout_form{
+    width: 596px;
+    z-index: 9999999999999!important;
+    background: #fefefe;
+    padding: 10px 18px 18px 18px;
+    border-radius: 10px;
+    margin-top: 10px;
+    position: absolute;
+    left:50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+#close-checkout{
+    position: absolute;
+    font-size: 24px;
+    right: 5px;
+    padding: 10px;
+    top: 0;
+    cursor: pointer;
+}
+#checkout_form h1{
+    text-align: center;
+    color: var(--green);
+    margin-bottom: 8px;
+    font-size: 32px;
+}
+#checkout_form .red-text{
+    font-weight: 500;
+    font-size: 13px;
+    text-align: center;
+    color: red;
+    margin-bottom: 16px;
+}
+#checkout_form .form-group{
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+}
+#checkout_form label{
+    text-align: left;
+    font-size: 14px;
+    font-weight: 700;
+    word-wrap: break-word;
+    width: 25%;
+}
+#checkout_form .form-icon-holder{
+    height: 45px;
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e1e1e1!important;
+    border-left: 1px solid #c0c0c0;
+    border-top: 1px solid #c0c0c0;
+    border-bottom: 1px solid #c0c0c0;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+#checkout_form .input{
+
+    
+    display: flex;
+    width: 100%;
+}
+#checkout_form input:not(.qty-input){
+    padding: 5px 15px;
+    font-size: 16px;
+    font-weight: 400;
+    width: 100%;
+    border: 1px solid #c0c0c0;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+#checkout_form h4{
+    text-align: center;
+    color: var(--green);
+    margin-bottom: 16px;
+    font-size: 20px;
+
+}
+.checkout-products .checkout-product:first-of-type{
+    border-top: 1px solid #d9d9d9;
+}
+#checkout_form .checkout-product{
+    border-bottom: 1px solid #d9d9d9;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 5px;
+}
+.checkout-product .quantity{
+    margin-bottom: 0;
+}
+.checkout-product .product-info{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+.product-info a{
+    text-decoration: underline;
+    color: #000;
+    font-size: 14px;
+    word-break: break-word;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.product-info .qty-input{
+    border-right: none;
+}
+
+.product-info .row-qty{
+    position: absolute;
+    left: 50px;
+    color: white;
+    font-weight: 600;
+    width: 18px;
+    height: 18px;
+    background-color: #7c7c7c;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 55px;
+}
+.product-info img{
+    border-radius: 6px;
+}
+#checkout_form .free-delivery-notice{
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    color: red;
+}
+#checkout_form .delivery-methods{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+#checkout_form .method{
+    display: flex;
+}
+
+.checkout-order-review{
+    padding: 4px 8px;
+    border-radius: 5px;
+    border: 1px solid #d9d9d9;
+    font-size: 14px;
+    background-color: #f9f9f9;
+}
+.checkout-order-review .order-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 0px;
+}
+.checkout-order-review .order-row p:nth-child(2){
+    text-align: right;
+    font-weight: 900;
+    font-size: 16px;
+}
+.checkout-order-review .order-total p:nth-child(2){
+    
+    font-size: 20px;
+}
+
+.checkout-upsells .checkout-upsell:first-of-type{
+    border-top: 1px solid #d9d9d9;
+}
+#checkout_form .checkout-upsell{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 5px;
+    border-bottom: 1px solid #d9d9d9;
+}
+#checkout_form .upsell-info{
+    display:flex;
+    flex-wrap:wrap;
+}
+.checkout-upsell .upsell-price{
+    flex-basis: 100%;
+}
+.checkout-upsell a{
+    text-decoration: underline;
+    color: #000;
+    font-size: 14px;
+    word-break: break-word;
+    font-weight: 500;
+}
+.checkout-upsell .add-upsell{
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 30px;
+    background-color: white;
+    border: 1px solid var(--red);
+    color: var(--red);
+    cursor: pointer;
+}
+#checkout_form .fee-item{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+    word-wrap: break-word;
+    font-size: 14px;
+    border: 2px dashed red;
+    padding: 8px;
+    margin-bottom: 6px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+.checkout-fees-checkbox {
+    width: 18px;
+    height: 18px;
+    border: 2px solid var(--red);
+    background-color: #fff;
+    position: relative;
+    border-radius: 5px;
+  }
+ 
+  .checkout-checkmark {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 7px;
+    height: 12px;
+    border: solid #000;
+    border-width: 0 2px 2px 0;
+    display: none;
+  }
+  #checkout_form .fee-item.checked{
+    border-color: var(--green)!important;
+  }
+  .fee-item.checked .checkout-fees-checkbox{
+    background-color: var(--red)!important;
+  }
+  .fee-item.checked .checkout-checkmark{
+    border-color: white!important;
+    display:block!important;
+  }
+.pay-button{
+    padding: 10px 0px;
+    font-size: 15px;
+    background-color: var(--red);
+    width: 100%;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    font-weight: 600;
+}
+
+.red-city{
+    border-color:red!important;
+}
+.dropdown-select{
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    height: 45px;
+    line-height: 45px;
+    text-align:left!important;
+    border: 1px solid #c0c0c0;
+    color: #00000099;
+    font-size: 16px!important;
+}
+
+media(max-width:768px){
+    .checkout-fees-checkbox{
+        padding: 8px;
+    }
+    #checkout_form{
+        width: 95vw;
+    }
+    #checkout_form .form-group{
+        flex-wrap: wrap;
+    }
+    #checkout_form label{
+        width: 100%;
+        margin-bottom: 8px;
+    }
+    .checkout-order-review .order-row{
+        gap: 10px;
+    }
+    .checkout-order-review .order-row p:nth-child(2){
+        font-size: 14px;
+    }
+    .checkout-order-review .order-total p:nth-child(1){
+        font-size: 14px;
+    }
+    .checkout-order-review .order-total p:nth-child(2){
+        font-size: 18px;
+    }
+    
+    .checkout-upsells .checkout-upsell:first-of-type{
+        border-top: 1px solid #d9d9d9;
+    }
+    #checkout_form .form-group{
+        margin-bottom: 22px!important;
+    }
+    .checkout-product .quantity{
+        margin-top: 8px;
+    }
+    .pay-button{
+        font-size: 15px;
+    }
+    .fee-item .square-checkbox{
+        padding: 7px;
+    }
+    
+}
